# postmd

./: .gitignore  AveChunk.py  AveTime.py  FileOperations.py  GreenKubo.py  LICENSE  MANIFEST.in  MDData.py  README.md  build_sphinx.ps1  correlate.ipynb  pyproject.toml  requirements.txt  setup.cfg  sphinx_multiversion.ps1
.github/workflows/: sphinx.yml
data/: Readme.md
docs/: REAMDE.md  conf.py  index.rst  install.rst  misc.rst  modules.rst  postmd.MDData.rst  postmd.animate.animate.rst  postmd.animate.append_animate.rst  postmd.animate.cum_animate.rst  postmd.animate.rst  postmd.avechunk.bin1d.rst  postmd.avechunk.rst  postmd.avetime.avetime.rst  postmd.avetime.greenkubo.rst  postmd.avetime.rst  postmd.log.dir.rst  postmd.log.logfile.rst  postmd.log.rst  postmd.rst  postmd.system.mdfile.rst  postmd.system.rst  postmd.system.system.rst  postmd.utils.rst  postmd.utils.utils.rst  requirements.txt  usage.rst
docs/_templates/apidoc/: module.rst_t  package.rst_t  toc.rst_t
docs/animate/: append_animate.rst  cum_animate.rst  toc.rst
docs/avetime/: GreenKubo.rst  toc.rst
docs/cli/: index.rst  postmd.rst
docs/misc/: atomic_units.md  unit_trans.md
postmd/: MDData.py  __init__.py
postmd/analysis/: __init__.py  base.py  dielelctric_constant.py  diffusion_coefficient.py  shear_viscosity.py
postmd/animate/: __init__.py  animate.py  append_animate.py  cum_animate.py
postmd/avechunk/: __init__.py  bin1d.py
postmd/avetime/: __init__.py  avetime.py  greenkubo.py
postmd/dump/: base.py  extract_data.py  extract_dump.sh  extract_xyz.py  extract_xyz.sh  io.py
postmd/log/: __init__.py  dir.py  logfile.py
postmd/mplstyles/: Readme.md
postmd/mplstyles/Arial/: Arial.mplstyle  Arial.py
postmd/mplstyles/Times/: Times.mplstyle  Times.py
postmd/mplstyles/Type42-DejaVu Sans/: Type42-DejaVu Sans.mplstyle  Type42-DejaVu Sans.py
postmd/mplstyles/Type42-Times-stix/: Type42-Times-stix.mplstyle  Type42-Times-stix.py
postmd/mplstyles/fonts/: Arial.mplstyle  Times+stix.mplstyle  Times.mplstyle
postmd/mplstyles/latex-Times/: latex-Times.mplstyle  latex-Times.py
postmd/mplstyles/mpl-basic/: mpl-basic.py
postmd/scripts/: cp2k_snippets.py  lmp_snippets.py  plumed_snippets.py  postmd.py
postmd/system/: __init__.py  mdfile.py  system.py
postmd/utils/: __init__.py  utils.py
src/PostMD/: AveChunk.py  AveTime.py  FileOperation.py  GreenKubo.py  utils.py
src/PostMD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PostMDtest/: AveTime.py  GreenKubo.py  MDData.py  utils.py
src/postmd/avetime/: greenkubo.py
src/postmd/log/: logfile.py
tests/: mplstyles-example.py  test_appendanimate.py  test_avechunk.py  test_avetime.py  test_cumanimate.py  test_extract_log.py  test_extract_thermodata_logfile.py  test_greenkubo.py  test_mdfile.py
tests/data/: extracted-log.lammps  friction_acf_overwriting.txt  log.lammps
