[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "postmd-dev"
authors = [
  { name = "sszhang", email = "zhangshusong789@gmail.com" },
]
description = "A simple package for post-processing of data from LAMMPS"
readme = "README.md"
license = {text = "MIT License"}
version = "0.1.0"

requires-python = ">=3.7"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "matplotlib>=3.6.0",
    "statsmodels>=0.13.0",
    "scipy>=1.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/remaker789/PostMD.git"

# [tool.setuptools.packages]
# find = {}  # Scanning implicit namespaces is active by default

# [tool.setuptools.packages.find]
# where = ["src"]
# namespaces = false