# in the root dir(i.e. dir of setup.cfg), use following command to build artifacts:
# python -m build
# if want to install the package in the editable model, use command:
# python -m pip install -e .
[metadata]
name = postmd
version = 0.1.1
author = Shusong Zhang
author_email = zhangshusong789@gmail.com
description = A simple package for post-processing of data from LAMMPS
long_description = file: README.md
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls = 
    Source = https://github.com/remaker789/postmd
    Documentation = https://remaker789.github.io/postmd-manual/main/
    # Release notes = 

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = false
install_requires =
    numpy >= 1.22.0,
    pandas >= 1.4.0,
    matplotlib >= 3.6.0,
    scipy >= 1.9.0,
    MDAnalysis >=2.7.0

[options.package_data]
# include the .sh file in postmd.dump module
postmd.dump =     
    *.sh       